# langbase-sdk-python

./: .env.example  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTION.md  Makefile  README.md  mypy.ini  pyproject.toml  release.py  requirements-dev.txt  ruff.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 1.bug_report.yml  2.feature_request.yml  config.yml
.github/workflows/: test.yml
docs/: resilience.md
examples/agent/: README.md  agent.run.mcp.py  agent.run.memory.py  agent.run.py  agent.run.stream.py  agent.run.structured.py  agent.run.tool.py  agent.run.typed-stream.py  agent.run.typed.py  agent.run.workflow.py
examples/chunk/: chunk.py
examples/chunker/: chunker.py
examples/embed/: embed.py
examples/memories/: memories.create.py  memories.docs.delete.py  memories.docs.list.py  memories.docs.retry-embed.py  memories.docs.upload.py  memories.list.py  memories.retrieve.py
examples/memory/: memory.add.py  memory.create.py  memory.docs.delete.py  memory.docs.list.py  memory.docs.retry-embed.py  memory.docs.upload-pdf.py  memory.docs.upload.py  memory.list.py  memory.retrieve.py
examples/parse/: parse.py
examples/parser/: parser-pdf-document.py  parser.py
examples/pipes/: pipe.run.chat.py  pipe.run.pipe.key.py  pipe.run.stream.chat.py  pipe.run.stream.llmkey.py  pipe.run.typed-tool-call.py  pipe.structured.outputs.py  pipes.create.py  pipes.list.py  pipes.run.py  pipes.run.stream.py  pipes.run.typed-stream.py  pipes.tool.stream.py  pipes.update.py
examples/resilience/: resilient_client.py
examples/threads/: threads.append.py  threads.create.py  threads.delete.py  threads.get.py  threads.list.py  threads.messages.list.py  threads.update.py
examples/tools/: tools.crawl.py  tools.web-search.py
examples/workflow/: email_processing.py  summarization.py  workflow.py
langbase/: __init__.py  client.py  constants.py  errors.py  helper.py  langbase.py  request.py  resilience.py  streaming.py  types.py  utils.py  workflow.py
tests/: __init__.py  conftest.py  constants.py  test_client.py  test_errors.py  test_helper.py  test_langbase.py  test_langbase_client.py  test_memories.py  test_pipes.py  test_request.py  test_resilience.py  test_threads.py  test_tools.py  test_utilities.py  test_utils.py  test_workflow.py  validation_utils.py
(+5 files in other folders)
